--- a/4.カテゴリから探す/5.会員登録・ログインについて/4.パスワードを忘れた.md
+++ b/4.カテゴリから探す/5.会員登録・ログインについて/4.パスワードを忘れた.md
@@ -1,27 +1,88 @@
-# パスワードを忘れた
+<h3>パスワードを忘れた</h3>
+<hr>
 
 パスワードを忘れた場合は、以下の手順で再発行をおこなってください。
 
-### ■iOS、Androidアプリをご利用の場合
+<h3>■iOS、Androidアプリをご利用の場合</h3>
 
-1. ログイン画面の［パスワードを忘れた方はこちら］をタップ
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>パスワードの変更手順</strong>
+</div>
 
-1. 登録済みの携帯番号を入力する
+<ol>
+<li>ログイン画面の［パスワードを忘れた方はこちら］をタップ</li>
+<br>
+<li>登録済みの携帯番号を入力する</li>
+<br>
+<li>［送信］ボタンをタップ</li>
+<br>
+<li>4桁のSMS認証コードが届くので入力する</li>
+<br>
+<li>［次へ］をタップ</li>
+<br>
+<li>パスワードの変更画面の［新しいパスワード］欄に、新しく登録を希望するパスワードを入力する</li>
+<br>
+<li>パスワードの変更画面の［パスワード確認］欄に、6で入力したパスワードを再度入力する</li>
+<br>
+<li>［変更する］ボタンをタップ<br>
+<br>
+<font color="#ff0000">※上記1から8の操作を終えた直後から、新しいパスワードをご利用いただけます。</font></li>
+</ol>
 
-1. ［送信］ボタンをタップ
+<hr>
 
-1. 4桁のSMS認証コードが届くので入力する
+<h3>■スマートフォンブラウザをご利用の場合</h3>
 
-1. ［次へ］をタップ
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>パスワードの変更手順</strong>
+</div>
 
-1. パスワードの変更画面の［新しいパスワード］欄に、新しく登録を希望するパスワードを入力する
+<ol>
+<li>ログイン画面の［パスワードを忘れた方はこちら］をタップ</li>
+<br>
+<li>登録済みの携帯番号を入力する</li>
+<br>
+<li>［送信］ボタンをタップ</li>
+<br>
+<li>4桁のSMS認証コードが届くので入力する</li>
+<br>
+<li>［次へ］をタップ</li>
+<br>
+<li>パスワードの変更画面の［新しいパスワード］欄に、新しく登録を希望するパスワードを入力する</li>
+<br>
+<li>パスワードの変更画面の［パスワード確認］欄に、6で入力したパスワードを再度入力する</li>
+<br>
+<li>［変更する］ボタンをタップ<br>
+<br>
+<font color="#ff0000">※上記1から8の操作を終えた直後から、新しいパスワードをご利用いただけます。</font></li>
+</ol>
 
-1. パスワードの変更画面の［パスワード確認］欄に、(6)で入力したパスワードを再度入力する
+<hr>
 
-1. ［パスワード変更］ボタンをタップ  
+<h3>■PCブラウザをご利用の場合</h3>
 
-上記(1)から(8)の操作を終えた直後から、新しいパスワードをご利用いただけます。
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>パスワードの変更手順</strong>
+</div>
 
-### ■スマートフォンブラウザをご利用の場合
+<ol>
+<li>ログイン画面の［パスワードを忘れた方はこちら］をクリック</li>
+<br>
+<li>登録済みの携帯番号を入力する</li>
+<br>
+<li>［送信］ボタンをクリック</li>
+<br>
+<li>登録の携帯電話に届いた4桁のSMS認証コードを入力する</li>
+<br>
+<li>［次へ］をクリック</li>
+<br>
+<li>パスワードの変更画面の［新しいパスワード］欄に、新しく登録を希望するパスワードを入力する</li>
+<br>
+<li>パスワードの変更画面の［パスワード確認］欄に、6で入力したパスワードを再度入力する</li>
+<br>
+<li>［変更する］ボタンをクリック<br>
+<br>
+<font color="#ff0000">※上記1から8の操作を終えた直後から、新しいパスワードをご利用いただけます。</font></li>
+</ol>
 
-### ■PCブラウザをご利用の場合
+<hr>
