--- a/1.コネポケ公式ガイド/初めての方へ/4.問い合わせについて.md
+++ b/1.コネポケ公式ガイド/初めての方へ/4.問い合わせについて.md
@@ -1,5 +1,9 @@
 <h3>問い合わせについて</h3>
 <hr>
+
 <h3><font color="#ff0000">まずは、ガイド＆ヘルプをお読みください。</font></h3>
-ご確認いただいても解決しない場合は、<br><strong>【お問い合せ】</strong>より、お問い合わせ詳細、必要事項を記載いただきお問い合せください。
+
+ご確認いただいても解決しない場合は、  
+<strong>【お問い合せ】</strong>より、お問い合わせ詳細、必要事項を記載いただきお問い合せください。
+
 <hr>
