--- a/1.コネポケ公式ガイド/初めての方へ/3.コネポケについて.md
+++ b/1.コネポケ公式ガイド/初めての方へ/3.コネポケについて.md
@@ -10,7 +10,7 @@
 コネクト（繋がる）  
 ポケット（色々な物が入る）
 
-「世の中の色々な物がポケットを通じて繋がっていけたら」という思いを込めています。  
+「世の中の色々な物がポケットを通じて繋がっていけたら」という思いを込めています。
 
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #008dd7; font-size: 120%">
 <font color="#ffffff">
@@ -23,8 +23,8 @@
 「捨てたいけど捨てられない」<br>
 「捨てるのことができないから誰かに使って欲しい」<br>
 「捨て方が分からない」<br>
-「捨てるのにお金がかかる」</strong></font><br>
-<br>
+「捨てるのにお金がかかる」</strong></font>
+
 色々な事情があって処分に困っている方は大勢いると思います。
 
 <font color="#008dd7"><h3>人の人生と同じように、「物」にも思い出や物語がたくさんあります。</h3></font>
@@ -39,5 +39,6 @@
 
 <font color="#008dd7"><strong>「手放す方」も「引き継ぐ方」もどちらも幸せな気持ちになれます。</strong></font>
 
-そんなお手伝いができればと思い、誰でも簡単にやり取りができるコネポケを開発しました。<br>
+そんなお手伝いができればと思い、誰でも簡単にやり取りができるコネポケを開発しました。
+
 <hr>
