--- a/1.コネポケ公式ガイド/ルールとマナー/1.コネポケで禁止されている出品物.md
+++ b/1.コネポケ公式ガイド/ルールとマナー/1.コネポケで禁止されている出品物.md
@@ -65,16 +65,16 @@
 <strong>偽造品・偽ブランド品・レプリカ・模造品</strong>
 </div>
 
-<font color="#ff0000">偽造されているものや、偽ブランド品、正規品と確証のないもの<br>
-<br>
-第三者の知的財産権を侵害しているもの<br>
-<br>
-他人の著作権を侵害する恐れがあるもの<br>
-<br>
-事務局が偽造品・レプリカ品、正規品と確証がない商品と判断したもの<br>
-<br>
-権利者から直接削除依頼があったもの<br>
-<br>
+<font color="#ff0000">偽造されているものや、偽ブランド品、正規品と確証のないもの
+
+第三者の知的財産権を侵害しているもの
+
+他人の著作権を侵害する恐れがあるもの
+
+事務局が偽造品・レプリカ品、正規品と確証がない商品と判断したもの
+
+権利者から直接削除依頼があったもの
+
 偽物の可能性がある商品を見つけた場合は商品ページの「通報」からご連絡をお願いいたします。
 </font>
 
