--- a/2.はじめてガイド/1.出品する/3.取引メッセージでやり取りをする.md
+++ b/2.はじめてガイド/1.出品する/3.取引メッセージでやり取りをする.md
@@ -6,7 +6,7 @@
 
 取引メッセージを利用して、商品の受渡し方法や場所、日時などを取引相手と決めましょう。
 
-<font color="#ff0000"> <strong>【注意】</strong> <br>
+<font color="#ff0000"> <strong>【注意】</strong>   
 最新取引メッセージから２週間経過すると取引メッセージはご利用できなくなります。
 </font>
 
