--- a/2.はじめてガイド/1.出品する/2.出品商品を下書きに保存する、編集する.md
+++ b/2.はじめてガイド/1.出品する/2.出品商品を下書きに保存する、編集する.md
@@ -1,7 +1,7 @@
 <h3>出品商品を下書きに保存する、編集する</h3>
 <hr>
 
-出品した商品を一時的に取り下げたい時や、内容を編集したいときは、下書きに保存します。<br>
+出品した商品を一時的に取り下げたい時や、内容を編集したいときは、下書きに保存します。
 
 <h3>■iOS、Androidアプリをご利用の場合</h3>
 
@@ -22,6 +22,7 @@
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
 <strong>下書きの編集方法</strong>
 </div>
+
 <ol>
 <li>HOME画面右下の［出品ボタン］またはサイドメニューの［出品する］をタップ</li>
 <br>
