--- a/4.カテゴリから探す/5.会員登録・ログインについて/1.本人情報の登録について.md
+++ b/4.カテゴリから探す/5.会員登録・ログインについて/1.本人情報の登録について.md
@@ -11,7 +11,7 @@
 
 新規会員登録時には、以下の情報のご登録が必要です。
 
-<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc; ">
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
 <ul>
 <li>携帯番号</li>
 <li>姓名、フリガナ</li>
@@ -39,13 +39,15 @@
 
 また、上記の情報をご入力後、身分証アップロードによるご本人様確認ページが表示されます。
 
-本人確認書類によるご本人様認証は後からでも可能ですが、以下のタイミングでご登録が必要です。
+本人確認書類によるご本人様認証は後からでも可能ですが、以下のいづれかのタイミングでご登録が必要です。
 
-<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc; ">
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
 <ul>
 <li>出品されている商品への初回取引申し込み時</li>
 <li>初回レスポンス時</li>
-<li>初回リクエスト時<br>
+<li>初回リクエスト時</li>
+<li>初回コメント時</li>
+<li>初回通報時</li>
 </ul>
 </div>
 
