--- a/4.カテゴリから探す/6.店舗掲載登録・ログインについて/3.ログインできない.md
+++ b/4.カテゴリから探す/6.店舗掲載登録・ログインについて/3.ログインできない.md
@@ -1,20 +1,32 @@
-# ログインできない
+<h3>ログインできない</h3>
+<hr>
 
 ログインができない場合、以下の原因が考えられます。
 
-### ■入力した「携帯番号」または「パスワード」が間違っている
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>入力した「携帯番号」または「パスワード」が間違っている</strong>
+</div>
 
-「携帯番号」「パスワード」の入力に誤りがないかご確認ください。
+<ul>
+<li>「携帯番号」「パスワード」の入力に誤りがないかご確認ください。</li>
+<br>
+<li>パスワードを忘れた場合は、パスワードの再発行をしてください。<br>
+<br>
+<font color="#ff0000">※再発行の流れは、［はじめてガイド］の［会員登録・ログインついて］＞［会員登録・ログインついて］＞<strong>［パスワードを忘れた］</strong>をご確認ください。</font></li>
+</ul>
 
-パスワードを忘れた場合は、パスワードの再発行をしてください。
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>規約違反行為などにより、利用制限されている</strong>
+</div>
 
-※再発行の流れは、［はじめてガイド］の［会員登録・ログインついて］＞［会員登録・ログインついて］＞［**パスワードを忘れた**］をご確認ください。
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
+規約違反行為などにより、ご利用を制限させていただいた場合、恐れ入りますがログインはできません。<br>
+<br>
+アカウント停止理由につきましては、コネポケに会員登録をされているメールアドレスに別途メッセージを送付させていただいております。<br>
+<br>
+なお、メールが届いていない場合やお取引中で連絡をとる必要がある場合、状況について確認いたしますので、下記よりお問い合わせいただきますようお願いいたします。<br>
+<br>
+<font color="#ff0000">［サイドメニュー］＞［ガイド＆ヘルプ］＞［お問い合わせ］＞［お問い合わせ項目を選ぶ］＞［会員登録について］の<strong>【ログインできない】または【アカウントが停止されました】</strong></font>
+</div>
 
-### ■規約違反行為などにより、利用制限されている
-
-規約違反行為などにより、ご利用を制限させていただいた場合、恐れ入りますがログインはできません。
-
-アカウント停止理由につきましては、コネポケに会員登録をされているメールアドレスに別途メッセージを送付させていただいております。
-
-なお、メールが届いていない場合やお取引中で連絡をとる必要がある場合、状況について確認いたしますので、下記よりお問い合わせいただきますようお願いいたします。  
-［サイドメニュー］＞［ガイド＆ヘルプ］＞［お問い合わせ］＞［お問い合わせ項目を選ぶ］＞［会員登録について］の【アカウントが停止されました】
+<hr>
