--- a/4.カテゴリから探す/6.店舗掲載登録・ログインについて/6.アカウントが停止されました.md
+++ b/4.カテゴリから探す/6.店舗掲載登録・ログインについて/6.アカウントが停止されました.md
@@ -1,7 +1,16 @@
-# アカウントが停止されました
+<h3>アカウントが停止されました</h3>
+<hr>
 
-規約違反行為などにより、ご利用を制限させていただくことがございます。
+<h3>規約違反行為などにより、利用制限されている可能性があります</h3>
 
-アカウント停止理由につきましては、コネポケに会員登録をされているメールアドレスに別途メッセージを送付させていただいております。
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
+規約違反行為などにより、ご利用を制限させていただくことがございます。<br>
+<br>
+アカウント停止理由につきましては、コネポケに会員登録をされているメールアドレスに別途メッセージを送付させていただいております。<br>
+<br>
+なお、メールが届いていない場合やお取引中で連絡をとる必要がある場合、状況について確認いたしますので、下記よりお問い合わせいただきますようお願いいたします。<br>
+<br>
+<font color="#ff0000">［サイドメニュー］＞［ガイド＆ヘルプ］＞［お問い合わせ］＞［お問い合わせ項目を選ぶ］＞［会員登録について］の<strong>【アカウントが停止されました】</strong></font>
+</div>
 
-なお、メールが届いていない場合やお取引中で連絡をとる必要がある場合、状況について確認いたしますので、［サイドメニュー］＞［ガイド＆ヘルプ］＞［お問い合わせ］＞［お問い合わせ項目を選ぶ］＞［店舗掲載登録ついて］の【アカウントが停止されました】よりお問い合わせいただきますようお願いいたします。
+<hr>
