--- a/4.カテゴリから探す/6.店舗掲載登録・ログインについて/1.店舗情報の登録について.md
+++ b/4.カテゴリから探す/6.店舗掲載登録・ログインについて/1.店舗情報の登録について.md
@@ -1,33 +1,48 @@
-# 店舗情報の登録について
+<h3>店舗情報の登録について</h3>
+<hr>
 
-## ■店舗掲載登録とは
+<h3>■店舗掲載登録とは</h3>
 
-コネポケの【**店舗を探す**】ページに店舗情報の掲載ができ、店舗情報を見たユーザ様から直接お仕事のご依頼を受けることができます。  
+コネポケの<strong>【店舗を探す】</strong>ページに店舗情報の掲載ができ、店舗情報を見たユーザ様から直接お仕事のご依頼を受けることができます。  
 また、広告掲載だけではなく、出品されている商品の引取やリクエストなど、コネポケ全てのサービスをご利用いただけます。
 
-## ■新規店舗登録の流れ
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>新規店舗登録の流れ</strong>
+</div>
 
 コネポケのご利用には、ユーザ様に安心・安全にサービスをご利用いただくため、新規店舗登録の際に、店舗情報のご登録いただいております。
 
-新規店舗登録時には、以下の情報のご登録、および決済が必要です。  
-（以下にご入力いただいた情報は公開されません）
+<font color="#ff0000">新規店舗登録時には、以下の情報のご登録および決済が必要です。　　
+（以下にご入力いただいた情報は公開されません）</font>
 
-    ・ご担当者様の携帯番号
-    ・店舗名（会社名・屋号）
-    ・代表者様名
-    ・会社電話番号
-    ・メールアドレス
-    ・ご住所
-    ・証明書のアップロード
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
+<ul>
+<li>ご担当者様の携帯番号</li>
+<li>店舗名（会社名・屋号）</li>
+<li>代表者様名</li>
+<li>会社電話番号</li>
+<li>メールアドレス</li>
+<li>ご住所</li>
+<li>証明書のアップロード</li>
+</ul>
+</div>
 
-- 認証完了後に全てのサービスがご利用いただけます。  
-（確認処理には3営業日程度のお時間をいただく場合がございます。）
+<h3>登録について</h3>
 
-- 一度ご登録いただいた店舗情報は、ご変更できません。
+<ol>
+<li>認証完了後に全てのサービスがご利用いただけます。<br>
+（確認処理には3営業日程度のお時間をいただく場合がございます。）</li>
+<br>
+<li>1度ご登録いただいた店舗情報は、ご変更できません。</li>
+<br>
+<li>変更する場合は証明書類の提出が必要になりますので、ご注意ください。</li>
+<br>
+<li>店舗情報の登録は「初回のみ」です。<br>
+ご利用のたびに登録いただく必要はありません。</li>
+</ol>
 
-- 変更する場合は、証明書類の提出が必要になりますので、ご注意ください。
+<hr>
 
-- 店舗情報の登録はそれぞれ「初回のみ」です。  
-ご利用のたびに登録いただく必要はありません。
+※利用できる本人確認書類については、［はじめてガイド］の［店舗登録・ログインについて］＞［本人確認書類について］＞<font color="#ff0000"><strong>［利用できる本人確認書類について］</strong></font>をご確認ください。
 
-- 利用できる本人確認書類については、［はじめてガイド］の［店舗登録・ログインについて］＞［本人確認書類について］＞［**利用できる本人確認書類について**］をご確認ください。
+<hr>
