--- a/4.カテゴリから探す/6.店舗掲載登録・ログインについて/1.店舗情報の登録について.md
+++ b/4.カテゴリから探す/6.店舗掲載登録・ログインについて/1.店舗情報の登録について.md
@@ -12,7 +12,10 @@
 
 コネポケのご利用には、ユーザ様に安心・安全にサービスをご利用いただくため、新規店舗登録の際に、店舗情報のご登録いただいております。
 
-<font color="#ff0000">新規店舗登録時には、以下の情報のご登録および決済が必要です。　　
+<font color="#ff0000">新規店舗登録時には、以下の情報のご登録および決済が必要です。  
+（以下にご入力いただいた情報は公開されません）</font>
+
+<font color="#ff0000">新規店舗登録時には、以下の情報のご登録および決済が必要です。<br>
 （以下にご入力いただいた情報は公開されません）</font>
 
 <div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
