--- a/4.カテゴリから探す/8.コメント・やり取りについて/1.どうやってコメントをすればいいですか.md
+++ b/4.カテゴリから探す/8.コメント・やり取りについて/1.どうやってコメントをすればいいですか.md
@@ -1,11 +1,25 @@
-# どうやってコメントをすればいいですか
+<h3>どうやってコメントをすればいいですか</h3>
+<hr>
+
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>コメントの手順</strong>
+</div>
 
 以下の手順で商品ページからコメントができます。
 
-1. トップ画面の気になる商品をタップ
-
-1. 商品画面の最下部の左下にある「コメントする」をタップ
-
-1. コメント欄に入力したい内容を記入して「送信」をタップ
-
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
+<ol>
+<li>トップ画面の気になる商品をタップ</li>
+<br>
+<li>商品画面の最下部の左下にある「コメントする」をタップ</li>
+<br>
+<li>コメント欄に入力したい内容を記入して「送信」をタップ<br>
+<br>
 ※やり取りしたコメントは商品ページからご確認いただけます。
+</ol>
+</div>
+
+<font color="#ff0000">心づかいを忘れず丁寧なコメントを心がけましょう。  
+不快なコメントや規約違反はアカウント停止になることがあります。</font>
+
+<hr>
