--- a/4.カテゴリから探す/8.コメント・やり取りについて/3.コメントは他のユーザーも見れますか.md
+++ b/4.カテゴリから探す/8.コメント・やり取りについて/3.コメントは他のユーザーも見れますか.md
@@ -1,14 +1,24 @@
-# コメントは他のユーザーも見れますか
+<h3>コメントは他のユーザーも見れますか</h3>
+<hr>
 
 コメントは全てのユーザー様に公開されています。
 
-コメントで商品の詳細、受渡し場所、時間などをある程度詳しくやり取りすることで、取引がスムーズに行えます。  
+<font color="#ff0000">心づかいを忘れず丁寧なコメントを心がけましょう。  
+不快なコメントや規約違反はアカウント停止になることがあります。</font>
 
-**住所や電話番号などの個人情報はコメント欄には絶対に入力しないでください。**  
-※トラブルが発生する原因となります
+コメントで商品の詳細、受渡し場所、時間などをある程度詳しくやり取りすることで、取引がスムーズに行えます。
 
-他のユーザーが質問しているコメントの内容を見て、参考にすることができます。  
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;  font-size: 110%">
+<font color="#ff0000">住所や電話番号などの個人情報はコメント欄には絶対に入力しないでください。<br>
+<br>
+※トラブルが発生する原因となります</font>
+</div>
 
-コメントでやり取りした後に商品の　【取引を申し込む】ボタンをタップしましょう。  
-取引申し込みが完了すると［取引メッセージ］が送れるようになれます。  
-（取引メッセージは他のユーザーに公開されません）  
+他のユーザーが質問しているコメントの内容を見て、参考にすることができます。
+
+コメントでやり取りした後に商品の【取引を申し込む】ボタンをタップしましょう。
+
+取引申し込みが完了すると<font color="#ff0000">［取引メッセージ］</font>が送れるようになれます。  
+<font color="#ff0000">取引メッセージは他のユーザーに公開されません。</font>
+
+<hr>
