--- a/4.カテゴリから探す/8.コメント・やり取りについて/4.コメントを削除したい.md
+++ b/4.カテゴリから探す/8.コメント・やり取りについて/4.コメントを削除したい.md
@@ -1,5 +1,15 @@
-# コメントを削除したい
+<h3>コメントを削除したい</h3>
+<hr>
 
-犯罪防止や違反防止のため、コメントのやりとりを削除する機能はご用意しておりません。  
+<h3>コメントは削除できません</h3>
 
-コメントを削除することはできませんので、個人情報などを誤まって入力することがないようにご注意ください。  
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
+犯罪防止や違反防止のため、コメントのやりとりを削除する機能はご用意しておりません。<br>
+<br>
+コメントを削除することはできませんので、個人情報などを誤まって入力することがないようにご注意ください。
+</div>
+
+<font color="#ff0000">心づかいを忘れず丁寧なコメントを心がけましょう。  
+不快なコメントや規約違反はアカウント停止になることがあります。</font>
+
+<hr>
