--- a/4.カテゴリから探す/8.コメント・やり取りについて/5.取引成立後もコメントはできますか.md
+++ b/4.カテゴリから探す/8.コメント・やり取りについて/5.取引成立後もコメントはできますか.md
@@ -1,7 +1,10 @@
-# 取引成立後もコメントはできますか
+<h3>取引成立後もコメントはできますか</h3>
+<hr>
 
 取引成立後のコメント機能はご利用になれません。
 
-取引成立後は［**取引メッセージ**］でやり取りを行なってください。
+取引成立後は<font color="#ff0000">［取引メッセージ］</font>でやり取りを行なってください。
 
-※取引成立後も［履歴］の対象商品ページから過去のコメントはご覧いただけます。
+<font color="#ff0000">※取引成立後も［履歴・取引メッセージ］の対象商品ページから過去のコメントはご覧いただけます。</font>
+
+<hr>
