--- a/4.カテゴリから探す/8.コメント・やり取りについて/6.相手ユーザーのアカウントが停止になった.md
+++ b/4.カテゴリから探す/8.コメント・やり取りについて/6.相手ユーザーのアカウントが停止になった.md
@@ -1,5 +1,12 @@
-# 相手ユーザーのアカウントが停止になった
+<h3>相手ユーザーのアカウントが停止になった</h3>
+<hr>
 
-規約に反するご利用、ルールやマナーに反するご利用、身分証の不備などで規約に基づきご利用を停止していることが考えられます。  
+<h3>規約違反行為などにより、利用制限されている可能性があります</h3>
 
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
+規約に反するご利用、ルールやマナーに反するご利用、身分証の不備などで規約に基づきご利用を停止していることが考えられます。<br>
+<br>
 やり取りを行われている場合は、申し訳ありませんが、他の商品をご検討ください。
+</div>
+
+<hr>
