--- a/4.カテゴリから探す/8.コメント・やり取りについて/7.通報したら相手に通知が行きますか.md
+++ b/4.カテゴリから探す/8.コメント・やり取りについて/7.通報したら相手に通知が行きますか.md
@@ -1,5 +1,7 @@
-# 通報したら相手に通知が行きますか
+<h3>通報したら相手に通知が行きますか</h3>
+<hr>
 
-通報を行なっていただいても、`「通報の通知」`が相手に届くことはございません。
-
+通報を行なっていただいても、<font color="#ff0000">「通報の通知」</font>が相手に届くことはございません。  
 「通報された方の情報」は一切は公開されませんのでご安心ください。
+
+<hr>
