--- a/4.カテゴリから探す/5.会員登録・ログインについて/5.メールアドレスを変更したい.md
+++ b/4.カテゴリから探す/5.会員登録・ログインについて/5.メールアドレスを変更したい.md
@@ -1,17 +1,45 @@
-# メールアドレスを変更したい
+<h3>メールアドレスを変更したい</h3>
+<hr>
 
-メールアドレスは以下の手順で変更がおこなえます
+メールアドレスは以下の手順で変更がおこなえます。
 
-### ■iOS、Androidアプリをご利用の場合
+<h3>iOS、Androidアプリをご利用の場合</h3>
 
-1. TOP画面左上の［三］を選択
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>メールアドレスの変更手順</strong>
+</div>
 
-1. サイドメニューにある［設定］をタップ
+<ol>
+<li>TOP画面左上の［三］をタップ</li>
+<br>
+<li>サイドメニューにある［設定］＞［会員登録情報］をタップ</li>
+<br>
+<li>メールアドレスの欄に登録したいメールアドレスを入力し、［変更する］ボタンをタップ</li>
+</ol>
 
-1. 「会員登録情報」をタップ
+<hr>
 
-1. メールアドレスの欄に登録したいメールアドレスを入力し、［変更する］ボタンをタップ
+<h3>■スマートフォンブラウザをご利用の場合</h3>
+<ol>
+<li>TOP画面右上の［ユーザーアイコン］をタップ</li>
+<br>
+<li>マイページ左上の［三］をタップ</li>
+<br>
+<li>サイドメニューにある［設定］＞［会員登録情報］をタップ</li>
+<br>
+<li>メールアドレスの欄に登録したいメールアドレスを入力し、［変更する］ボタンをタップ</li>
+</ol>
 
-### ■スマートフォンブラウザをご利用の場合
+<hr>
 
-### ■PCブラウザをご利用の場合
+<h3>■PCブラウザをご利用の場合</h3>
+
+<ol>
+<li>TOP画面右上の［ユーザーアイコン］をクリック</li>
+<br>
+<li>サイドメニューにある［設定］＞［会員登録情報］をクリック</li>
+<br>
+<li>メールアドレスの欄に登録したいメールアドレスを入力し、［変更する］ボタンをクリック</li>
+</ol>
+
+<hr>
