--- a/2.はじめてガイド/7.キャンセル・返金について/3.返金について.md
+++ b/2.はじめてガイド/7.キャンセル・返金について/3.返金について.md
@@ -17,9 +17,9 @@
 <strong>店舗掲載登録（月額11,000円）</strong>
 </div>
 
-店舗掲載登録のご利用は<font color="#ff0000">月額11,000円</font>の<font color="#ff0000">店舗掲載料</font>がかかります。<br>
-<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
+店舗掲載登録のご利用は<font color="#ff0000">月額11,000円</font>の<font color="#ff0000">店舗掲載料</font>がかかります。
 
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
 <ul>
 <li>登録後は1ヶ月ごとの自動継続課金となります</li>
 <br>
@@ -29,4 +29,5 @@
 <br>
 <li>登録を解除した日付にかかわらず、日割り返金はできません</li>
 </div>
+
 <hr>
