--- a/2.はじめてガイド/7.キャンセル・返金について/2.取引相手からキャンセルされた.md
+++ b/2.はじめてガイド/7.キャンセル・返金について/2.取引相手からキャンセルされた.md
@@ -1,13 +1,14 @@
 <h3>取引相手からキャンセルされた</h3>
 <hr>
+
 取引を中止する場合はユーザー様同士で同意されてからの取引のキャンセルをお願いしております。
 
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
 <strong>取引のキャンセルの原因について</strong>
 </div>
 
-<font color="#ff0000">取引はユーザー様同士の意思と責任で成立するものです。<br>
-コメントや取引メッセージで詳細をよくご確認ください。<br></font>
+<font color="#ff0000">取引はユーザー様同士の意思と責任で成立するものです。  
+コメントや取引メッセージで詳細をよくご確認ください。</font>
 
 <div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 1px solid #ff3333; background-color: #ffe0e2;">
 <ul>
@@ -18,7 +19,9 @@
 <li>取引相手に「不安」を感じた</li>
 </ul>
 </div>
-※不適切な対応をされるユーザーがいらっしゃる場合、相手ユーザーを特定させていただくため、対象商品の<font color="#ff0000"><strong>［通報］</strong></font>から詳細をお知らせください。<br>
-<br>
+
+※不適切な対応をされるユーザーがいらっしゃる場合、相手ユーザーを特定させていただくため、対象商品の<font color="#ff0000"><strong>［通報］</strong></font>から詳細をお知らせください。
+
 悪質なユーザーの場合は、<font color="#ff0000"><strong>アカウント停止</strong></font>などを検討させていただきます。
+
 <hr>
