--- a/4.カテゴリから探す/8.コメント・やり取りについて/8.取引相手と連絡が取れない/1.取引申込み後、相手ユーザから連絡がない.md
+++ b/4.カテゴリから探す/8.コメント・やり取りについて/8.取引相手と連絡が取れない/1.取引申込み後、相手ユーザから連絡がない.md
@@ -1,4 +1,5 @@
-# 取引申込み後、相手ユーザから連絡がない
+<h3>取引申込み後、相手ユーザから連絡がない</h3>
+<hr>
 
 取引申込み時や、取引メッセージ送信時は相手ユーザー様に通知が送られるようになっております。
 
@@ -6,5 +7,41 @@
 
 申し訳ありませんが、再度取引メッセージを投稿して返事をお待ちいただくか、他の商品、投稿をお探しになってください。
 
-悪質な場合は、問題発生となった対象商品ページより詳細内容を記載の上、［通報］ください。  
+<div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
+悪質な場合は、問題発生となった対象商品ページより詳細内容を記載の上、<font color="#ff0000">［通報］</font>ください。<br>
 内容を確認の上、アカウント停止などを検討させていただきます。
+</div>
+
+コネポケのガイドおよび利用規約に違反している可能性のあるユーザーは、以下の手順でご報告ください。
+
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>通報の手順</strong>
+</div>
+
+<ol>
+<li>通報したい問題発生となった対象商品を選択し、［通報］をタップ</li>
+<br>
+<li>違反の種類を選択し、通報理由の詳細を入力<br>
+<font color="#ff0000">※できる限り詳しく内容をご記入ください。</font></li>
+<br>
+<li>「問題の報告を送信しました」とメッセージが表示されたら報告完了です。</li>
+</ol>
+
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>【通報できる内容】</strong>
+</div>
+
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
+<ul>
+<li>不適切なコメント</li>
+<li>規約に違反する出品</li>
+<li>規約に違反する行為</li>
+<li>法令違反の報告</li>
+<li>悪質ユーザーの報告</li>
+<li>その他
+</ul>
+</div>
+
+コネポケ事務局にて内容を確認させていただき、適切に対応いたします。
+
+<hr>
