--- a/4.カテゴリから探す/9.退会、メール・通知の解除について/1.通知について.md
+++ b/4.カテゴリから探す/9.退会、メール・通知の解除について/1.通知について.md
@@ -1,7 +1,10 @@
-# 通知について
+<h3>通知について</h3>
+<hr>
 
 通知とは、コネポケからユーザー様へお知らせする機能です。
 
 コネポケアプリを起動していない状態でも、ご利用の端末にお知らせが届きます。
 
-通知はサイドメニューの［設定］＞［お知らせ］から設定をお願いいたします。
+通知はサイドメニューの<strong>［設定］＞［お知らせ］</strong>から設定をお願いいたします。
+
+<hr>
