--- a/4.カテゴリから探す/9.退会、メール・通知の解除について/2.お知らせ設定とは.md
+++ b/4.カテゴリから探す/9.退会、メール・通知の解除について/2.お知らせ設定とは.md
@@ -1,29 +1,51 @@
-# お知らせ設定とは
+<h3>お知らせ設定とは</h3>
+<hr>
 
 コネポケ内での取引やニュースについてのお知らせを受け取ることができます。
 
-サイドメニューの［設定］＞［お知らせ］の`スライドボタン`をタップして、ON/OFFが設定できます。  
-※色付きの時にお知らせが届く設定です
+サイドメニューの<strong>［設定］＞［お知らせ］</strong>の<font color="#ff0000">スライドボタン</font>をタップして、ON/OFFが設定できます。  
+<font color="#ff0000">※色付きの時にお知らせが届く設定です。</font>
 
-    いいね！
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>いいね！</strong>
+</div>
+
 いいね！があった時にお知らせを受信することができます。
 
-    コメント
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>コメント</strong>
+</div>
 
 自分が出品した商品にコメントがあった時にお知らせを受信することができます。
 
-    ダイレクトメッセージ
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>お気に入り</strong>
+</div>
 
-取り引き相手からダイレクトメッセージがあった時にお知らせを受信することができます。
+お気に入り登録している商品に他のユーザーがコメントした時に受信することができます。
 
-    レスポンス
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>取引メッセージ</strong>
+</div>
+
+取り引き相手から取引メッセージがあった時にお知らせを受信することができます。
+
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>レスポンス</strong>
+</div>
 
 リクエスト商品にレスポンスがあった時にお知らせを受信することができます。
 
-    新着通知
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>新着通知</strong>
+</div>
 
 登録地域の新着の出品があった時にお知らせを受信することができます。
 
-    コネポケニュース
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>コネポケニュース</strong>
+</div>
 
 コネポケからのお知らせを受信することができます。
+
+<hr>
