--- a/4.カテゴリから探す/9.退会、メール・通知の解除について/3.プッシュ通知が届かない.md
+++ b/4.カテゴリから探す/9.退会、メール・通知の解除について/3.プッシュ通知が届かない.md
@@ -1,35 +1,42 @@
-# プッシュ通知が届かない
+<h3>プッシュ通知が届かない</h3>
+<hr>
 
 通信環境が良好でないと、プッシュ通知に遅れが生じる場合があります。
 
-コネポケからのプッシュ通知を受け取る設定になっているか以下の手順でご確認
+コネポケからのプッシュ通知を受け取る設定になっているか以下の手順でご確認ください。
 
-ください。
+<h3>■iosご利用の場合</h3>
 
-### ■iosご利用の場合
+<ol>
+<li>ホーム画面の［設定］をタップ</li>
+<br>
+<li>［通知］をタップ</li>
+<br>
+<li>［コネポケ］をタップ</li>
+<br>
+<li>［通知を許可］の<font color="#ff0000">スライドボタン</font>をタップして、ON/OFFが設定できます。<br>
+<font color="#ff0000">※色付きの時にお知らせが届く設定です。</font></li>
+</ol>
 
-1. ホーム画面の［設定］をタップ
+<h3>■Androidご利用の場合</h3>
 
-1. ［通知］をタップ
+<ol>
+<li>ホーム画面の［設定］をタップ</li>
+<br>
+<li>［アプリ］をタップ</li>
+<br>
+<li>［コネポケ］をタップ</li>
+<br>
+<li>［通知を表示］のチェックを外し、［OK］をタップすると、コネポケからの通知は全てオフになります。</li>
+<br>
+<li>［通知を表示］のチェックをオンにすることで再び通知が受け取れるようになります。</li>
+</ol>
 
-1. ［コネポケ］をタップ
+<h3>■コネポケアプリ内で設定する</h3>
 
-1. ［通知を許可］のスライドボタンをタップ
+<ol>
+<li>サイドメニューから［設定］＞［お知らせ設定］の<font color="#ff0000">スライドボタン</font>をタップして、ON/OFFが設定できます。<br>
+<font color="#ff0000">※色付きの時にお知らせが届く設定です。</font></li>
+</ol>
 
-### ■Androidご利用の場合
-
-1. ホーム画面の［設定］をタップ
-
-1. ［アプリ］をタップ
-
-1. ［コネポケ］をタップ
-
-1. ［通知を表示］のチェックを外し、［OK］をタップすると、コネポケからの通知は全てオフになります。
-
-［通知を表示］のチェックをオンにすることで再び通知が受け取れるようになります。
-
-## ■コネポケアプリ内で設定する
-
-1. サイドメニューから［設定］＞［お知らせ設定］をタップ
-
-1. 項目別にお知らせの設定をすることができます。
+<hr>
