--- a/4.カテゴリから探す/9.退会、メール・通知の解除について/4.コネポケから届くメールを止めたい.md
+++ b/4.カテゴリから探す/9.退会、メール・通知の解除について/4.コネポケから届くメールを止めたい.md
@@ -1,5 +1,8 @@
-# コネポケからのメール配信を止めてほしい
+<h3>コネポケからのメール配信を止めたい</h3>
+<hr>
 
-コネポケから配信されるメールは、ご利用において大切なお知らせをお送りしているため、配信停止機能はご用意しておらず配信停止のご要望もお受けできません。  
+コネポケから配信されるメールは、ご利用において大切なお知らせをお送りしているため、配信停止機能はご用意しておらず配信停止のご要望もお受けできません。
 
-不要なメールにつきましては、お手数ですが破棄していただきますようお願いいたします。  
+不要なメールにつきましては、お手数ですが破棄していただきますようお願いいたします。
+
+<hr>
