--- a/4.カテゴリから探す/9.退会、メール・通知の解除について/5.新着通知を解除したい.md
+++ b/4.カテゴリから探す/9.退会、メール・通知の解除について/5.新着通知を解除したい.md
@@ -1,5 +1,9 @@
-# 新着通知を解除したい
+<h3>新着通知を解除したい</h3>
+<hr>
 
 新着通知の設定は以下の手順でお願いします。
 
-サイドメニューの［設定］＞［お知らせ］よりボタンをタップして`オフ`にしてください。
+サイドメニューの<strong>［設定］＞［お知らせ］</strong>の<font color="#ff0000">スライドボタン</font>をタップして、ON/OFFが設定できます。  
+<font color="#ff0000">※色付きの時にお知らせが届く設定です。</font>
+
+<hr>
