--- a/4.カテゴリから探す/10.機能・その他/4.新着通知を登録したい.md
+++ b/4.カテゴリから探す/10.機能・その他/4.新着通知を登録したい.md
@@ -1,5 +1,9 @@
-# 新着通知を登録したい
+<h3>新着通知を登録したい</h3>
+<hr>
 
-新着通知の設定は以下の手順でお願いします。  
+新着通知の設定は以下の手順でお願いします。
 
-サイドメニューの［設定］＞［お知らせ］よりボタンをタップして`オン`にしてください。
+サイドメニューから［設定］＞［お知らせ設定］の<font color="#ff0000">スライドボタン</font>をタップして、ON/OFFが設定できます。  
+<font color="#ff0000">※色付きの時にお知らせが届く設定です。</font>
+
+<hr>
