--- a/4.カテゴリから探す/10.機能・その他/5.いいね！とは.md
+++ b/4.カテゴリから探す/10.機能・その他/5.いいね！とは.md
@@ -1,9 +1,18 @@
-# いいね！とは
+<h3>いいね！とは</h3>
+<hr>
 
-［いいね！］は取引が完了した後に、取引相手のユーザー様を評価できる機能です。
+<strong>［いいね！］</strong>は取引が完了した後に、<font color="#ff0000">取引相手のユーザー様を評価</font>できる機能です。
 
-サイドメニューから ＞［履歴］＞ 対象商品ページの［**いいね！**］をタップすると［いいね！］ができます。  
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>いいね！の手順</strong>
+</div>
 
-１つの取引に対して、１ユーザーしか［いいね！］することができません。
+<ol>
+<li>サイドメニューから ＞［履歴］＞ 対象商品ページの<strong>［いいね！］</strong>をタップすると<strong>［いいね！］</strong>ができます。</li>
+<br>
+<li>１つの取引に対して、１ユーザーしか<strong>［いいね！］</strong>することができません。</li>
+<br>
+<li><strong>［いいね！］</strong>の数は<font color="#ff0000">［マイページ］</font>から確認をすることができます。</li>
+</ol>
 
-［いいね！］の数は`［マイページ］`から確認をすることができます。
+<hr>
