--- a/4.カテゴリから探す/10.機能・その他/6.禁止行為について確認したい.md
+++ b/4.カテゴリから探す/10.機能・その他/6.禁止行為について確認したい.md
@@ -1,7 +1,26 @@
-# 禁止行為について確認したい
+<h3>禁止行為について確認したい</h3>
+<hr>
 
-コネポケの禁止行為は`［ルールとマナー］`をご確認ください。
+コネポケの禁止行為は<font color="#ff0000"><strong>［ルールとマナー］</strong></font>をご確認ください。
 
-サイドメニューから＞`［ガイド＆ヘルプ］`＞`［利用規約など］`＞`［禁止されている行為］`  
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2; font-size: 120%">
+<strong>利用規約</strong>
+</div>
 
-コネポケを安心してご利用いただくため、コネポケのご利用の前に必ず`［ルールとマナー］`をご確認ください。  
+サイドメニューから＞<font color="#ff0000">［ガイド＆ヘルプ］</font>＞<font color="#ff0000">［利用規約など］</font>＞<font color="#ff0000">［利用規約］</font>
+
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2; font-size: 120%">
+<strong>禁止されている出品物</strong>
+</div>
+
+サイドメニューから＞<font color="#ff0000">［ガイド＆ヘルプ］</font>＞<font color="#ff0000">［利用規約など］</font>＞<font color="#ff0000">［禁止されている出品物］</font>
+
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2; font-size: 120%">
+<strong>禁止されている行為</strong>
+</div>
+
+サイドメニューから＞<font color="#ff0000">［ガイド＆ヘルプ］</font>＞<font color="#ff0000">［利用規約など］</font>＞<font color="#ff0000">［禁止されている行為］</font>
+
+コネポケを安心してご利用いただくため、コネポケのご利用の前に必ず<font color="#ff0000"><strong>［ルールとマナー］</strong></font>をご確認ください。
+
+<hr>
