--- a/4.カテゴリから探す/10.機能・その他/1.利用できるクレジットカードを教えてください.md
+++ b/4.カテゴリから探す/10.機能・その他/1.利用できるクレジットカードを教えてください.md
@@ -1,10 +1,17 @@
-# 利用できるクレジットカードを教えてください
+<h3>利用できるクレジットカードを教えてください</h3>
+<hr>
 
-お支払いには、以下のクレジットカード（国内発行のみ）をご利用いただけます。  
+お支払いには、以下のクレジットカード（国内発行のみ）をご利用いただけます。
 
-    ・VISA
-    ・Masterscar
-    ・JCB
-    ・AmericanExpress
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
+<ul>
+<li>VISA</li>
+<li>Masterscar</li>
+<li>JCB</li>
+<li>AmericanExpress</li>
+</ul>
+</div>
 
- ※海外発行のクレジットカードはご利用いただけません。  
+<font color="#ff0000">※海外発行のクレジットカードはご利用いただけません。</font>
+
+<hr>
