--- a/4.カテゴリから探す/10.機能・その他/2.未承認と表示されます.md
+++ b/4.カテゴリから探す/10.機能・その他/2.未承認と表示されます.md
@@ -1,9 +1,24 @@
-# 未承認と表示されます
+<h3>未承認と表示されます</h3>
+<hr>
 
-本人確認は、申請から通常３営業日ほどお日にちをいただく場合がございます。
+本人確認は、申請から<font color="#ff0000">通常３営業日</font>ほどお日にちをいただく場合がございます。
 
-本人確認手続きが完了するまでは、サービスをご利用いただけません。  
-**取引をスムーズに行うために、新規登録時の本人確認書類のアップロードをおすすめしております**
+本人確認手続きが完了するまでは、ご利用になれないサービスがございます。
 
-本人確認が完了しますと、サイドメニュから上部の［写真アイコン］をタップすると「プロフィールページ」が表示されます。  
-「プロフィールページ」の中の「未認証」マークが`「認証済」`マークに変わります。
+<font color="#ff0000">※取引をスムーズに行うために、新規登録時の本人確認書類のアップロードをおすすめしております。</font>
+
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>承認済の確認手順</strong>
+</div>
+
+<ol>
+<li>本人確認が完了しますと、認証完了の通知が届きます。</li>
+<br>
+<li>本人確認が完了しますと、サイドメニュから上部の［写真アイコン］をタップすると「プロフィールページ」が表示されます。</li>
+<br>
+<li>「プロフィールページ」の中の「未認証」マークが<font color="#ff0000">「認証済」</font>マークに変わります。<br>
+<br>
+<font color="#ff0000">※提出いただいた本人確認書類が不鮮明な場合や、内容に不備がある場合は再提出をお願いすることがあります。</font></li>
+</ol>
+
+<hr>
