--- a/4.カテゴリから探す/5.会員登録・ログインについて/1.本人情報の登録について.md
+++ b/4.カテゴリから探す/5.会員登録・ログインについて/1.本人情報の登録について.md
@@ -28,7 +28,7 @@
 <li>本人情報の登録はそれぞれ「初回のみ」です。<br>
 ご利用のたびに登録いただく必要はありません。</li>
 <br> 
-<li>一度登録いただいた本人情報は、ご住所、メールアドレス以外は変更できません。</li>
+<li>一度登録いただいた本人情報は、携帯番号、ご住所、メールアドレス以外は変更できません。</li>
 <br> 
 <li>変更する場合は、本人確認書類の提出が必要になりますので、ご注意ください。</li>
 </ol>
