--- a/4.カテゴリから探す/5.会員登録・ログインについて/8.退会した後、再登録したい.md
+++ b/4.カテゴリから探す/5.会員登録・ログインについて/8.退会した後、再登録したい.md
@@ -1,28 +1,36 @@
-# 退会した後、再登録したい
+<h3>退会した後、再登録したい</h3>
+<hr>
 
-コネポケでご利用できるアカウントは１つのみです。
+コネポケでご利用できるアカウントは１つのみ有効です。
 
 退会後、再登録をご希望される場合は、過去のアカウントを復活させる対応となります。
 
-過去のアカウントにログインする場合は、以下の手順で行なってください。
+※退会したIDでログインまたは新規登録しようとした場合、  
+　【コネポケを退会しています。復帰されたい場合はガイド＆ヘルプの「お問い合わせ」よりご連絡ください。】  
+　と表示されます。
 
-1. コネポケのアプリを再度インストールする
+<div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
+<strong>再登録の流れ</strong>
+</div>
 
-1. ［新規登録］画面に過去にご利用していたIDとパスワードを入力
+再登録をご希望の場合、以下の情報を明記のうえご連絡ください。
 
-1. 「コネポケ会員を退会されています。復活しますか？」と表示されるので「はい」を選択する
+<div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
+<ol>
+<li>氏名</li>
+<br>
+<li>生年月日</li>
+<br>
+<li>登録住所</li>
+<br>
+<li>携帯電話番号</li>
+<br>
+<li>登録メールアドレス<br>
+<br>
+<font color="#ff0000">※登録携帯電話番号・メールアドレスと現在ご利用の携帯電話番号・メールアドレスが相違している場合、併せてご明記ください。</font></li>
+</ol>
+</div>
 
-IDとパスワードがわからない、ログインできない場合は、以下の情報を明記のうえ［再登録のお問い合わせ］からご連絡ください。
+[![mail](https://raw.githubusercontent.com/sendroidsFamily/useGuides/master/1.%E3%82%B3%E3%83%8D%E3%83%9D%E3%82%B1%E5%85%AC%E5%BC%8F%E3%82%AC%E3%82%A4%E3%83%89/%E5%88%9D%E3%82%81%E3%81%A6%E3%81%AE%E6%96%B9%E3%81%B8/images/mail1.jpg)](mailto:support@conepoke.com)
 
-```
-    ・氏名
-
-    ・登録住所
-
-    ・携帯電話番号
-
-    ・登録メールアドレス  
-```
-※登録メールアドレス・携帯電話番号と現在ご利用のメールアドレス・携帯電話番号が相違している場合、併せてご明記ください。  
-
-[再登録のお問い合わせ](mailto:support@conepoke.com) はこちら
+<hr>
