--- a/4.カテゴリから探す/7.キャンセル・返金について/2.キャンセル時の返金について.md
+++ b/4.カテゴリから探す/7.キャンセル・返金について/2.キャンセル時の返金について.md
@@ -1,8 +1,9 @@
 <h3>キャンセル時の返金について</h3>
 <hr>
-コネポケ有料サービスの利用料は月額継続課金方式となります。<br>
-<br>
-取引がキャンセルになった場合など、いかなる理由であっても返金はおこなっておりませんので、あらかじめご了承ください。<br>
+
+コネポケ有料サービスの利用料は月額継続課金方式となります。
+
+取引がキャンセルになった場合など、いかなる理由であっても返金はおこなっておりませんので、あらかじめご了承ください。
 
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
 <strong>有料サービスの月額継続課金について</strong>
@@ -20,4 +21,5 @@
 </div>
 
 <font color="#ff0000">トラブル防止やスムーズなお取り引きができますよう、［取引を申込む前］にコメント機能を利用して、相手ユーザー様へ商品詳細や受渡し方法などのご確認をお願いいたします。</font>
+
 <hr>
