--- a/4.カテゴリから探す/9.退会、メール・通知の解除について/6.退会したい.md
+++ b/4.カテゴリから探す/9.退会、メール・通知の解除について/6.退会したい.md
@@ -23,7 +23,7 @@
 <strong>退会する必要がない場合</strong>
 </div>
 
-次の場合は退会しなくても各手続きをすれば大丈夫です。
+次の場合は、退会をしなくても個別に設定・対応が可能です。
 
 <div style="padding: 10px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #ff3333; background-color: #ffe0e2;">
 <ul>
