--- a/4.カテゴリから探す/10.機能・その他/1.利用できるクレジットカードを教えてください.md
+++ b/4.カテゴリから探す/10.機能・その他/1.利用できるクレジットカードを教えてください.md
@@ -6,9 +6,9 @@
 <div style="padding: 3px 15px 3px 0px; margin-top: 15px; margin-bottom: 20px; border: 3px solid #dcdcdc;">
 <ul>
 <li>VISA</li>
-<li>Masterscar</li>
+<li>Mastercard</li>
 <li>JCB</li>
-<li>AmericanExpress</li>
+<li>American Express</li>
 </ul>
 </div>
 
