--- a/4.カテゴリから探す/5.会員登録・ログインについて/8.退会した後、再登録したい.md
+++ b/4.カテゴリから探す/5.会員登録・ログインについて/8.退会した後、再登録したい.md
@@ -5,9 +5,8 @@
 
 退会後、再登録をご希望される場合は、過去のアカウントを復活させる対応となります。
 
-※退会したIDでログインまたは新規登録しようとした場合、  
-　【コネポケを退会しています。復帰されたい場合はガイド＆ヘルプの「お問い合わせ」よりご連絡ください。】  
-　と表示されます。
+<font color="ff0000">※退会したIDでログインまたは新規登録しようとした場合は下記の表示がされます。</font>  
+<strong>【コネポケを退会しています。復帰されたい場合はガイド＆ヘルプの「お問い合わせ」よりご連絡ください。】</strong>
 
 <div style="padding: 7px 15px; margin-top: 15px; margin-bottom: 15px; border: 1px solid #dcdcdc; background-color: #dcdcdc; font-size: 120%">
 <strong>再登録の流れ</strong>
