--- a/2.はじめてガイド/1.出品する/2.出品商品を下書きに保存する、編集する.md
+++ b/2.はじめてガイド/1.出品する/2.出品商品を下書きに保存する、編集する.md
@@ -28,7 +28,7 @@
 <br>
 <li>［下書き一覧へ］または、右上の［フォルダアイコン］をタップ</li>
 <br>
-<li>下書き一覧より、編集したい投稿をタップする</li>
+<li>下書き一覧より、編集したい投稿をタップ</li>
 <br>
 <li>出品画面より編集したい内容を編集する</li>
 <br>
@@ -44,7 +44,7 @@
 </div>
 
 <ol>
-<li>TOP画面右上の［ユーザアイコン］をタップ</li>
+<li>TOP画面右上の［ユーザーアイコン］をタップ</li>
 <br>
 <li>マイページ左上の［三］をタップ</li>
 <br>
@@ -60,7 +60,7 @@
 </div>
 
 <ol>
-<li>TOP画面右上の［ユーザアイコン］をタップ</li>
+<li>TOP画面右上の［ユーザーアイコン］をタップ</li>
 <br>
 <li>マイページ左上の［三］をタップ</li>
 <br>
@@ -96,11 +96,11 @@
 </div>
 
 <ol>
-<li>TOP画面右上の［ユーザアイコン］をクリック</li>
+<li>TOP画面右上の［ユーザーアイコン］をクリック</li>
 <br>
-<li>マイページのサイドメニューにある［下書き一覧］をクリック</li>
+<li>サイドメニューの［下書き一覧］をクリック</li>
 <br>
-<li>下書き一覧より、編集したい投稿をクリックする</li>
+<li>下書き一覧より、編集したい投稿をクリック</li>
 <br>
 <li>出品画面より編集したい内容を編集する</li>
 <br>
