--- a/4.カテゴリから探す/10.機能・その他/5.いいね！とは.md
+++ b/4.カテゴリから探す/10.機能・その他/5.いいね！とは.md
@@ -7,8 +7,12 @@
 <strong>いいね！の手順</strong>
 </div>
 
+<strong>［いいね！］</strong>は取引が完了した後に、下記の手順でおこなえます。
+
 <ol>
-<li>サイドメニューから ＞［履歴］＞ 対象商品ページの<strong>［いいね！］</strong>をタップすると<strong>［いいね！］</strong>ができます。</li>
+<li>サイドメニューの［履歴・取引メッセージ］から取引成立した商品画像をタップ</li>
+<br>
+<li>取引情報が表示されますので、ページ内の<strong>［いいね！］</strong>をタップすると<strong>［いいね！］</strong>ができます。</li>
 <br>
 <li>１つの取引に対して、１ユーザーしか<strong>［いいね！］</strong>することができません。</li>
 <br>
